--- a/src/data/pyproject.toml
+++ b/src/data/pyproject.toml
@@ -5,4 +5,6 @@ description = "Data pipeline for AcciMap."
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "google-cloud-storage>=3.4.0",
+    "polars>=1.33.1",
 ]
