--- a/src/datapipeline/pyproject.toml
+++ b/src/datapipeline/pyproject.toml
@@ -6,5 +6,6 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "google-cloud-storage>=3.4.0",
-    "polars>=1.33.1",
+    "pandas>=2.3.3",
+    "pyarrow>=21.0.0",
 ]
