--- a/compose.yaml
+++ b/compose.yaml
@@ -4,3 +4,31 @@ services:
       context: ./src/datapipeline
       dockerfile: Dockerfile
     image: datapipeline
+    environment:
+      GOOGLE_APPLICATION_CREDENTIALS: /run/secrets/gcp_sa
+    secrets:
+      - gcp_sa
+
+  model:
+    build:
+      context: ./src/model
+      dockerfile: Dockerfile
+    image: model
+    environment:
+      GOOGLE_APPLICATION_CREDENTIALS: /run/secrets/gcp_sa
+    secrets:
+      - gcp_sa
+
+  ui:
+    build:
+      context: ./src/ui
+      dockerfile: Dockerfile
+    image: ui
+    environment:
+      GOOGLE_APPLICATION_CREDENTIALS: /run/secrets/gcp_sa
+    secrets:
+      - gcp_sa
+
+secrets:
+  gcp_sa:
+    file: ./secrets/data-sa.json
